--- a/style.css
+++ b/style.css
@@ -1,9 +1,34 @@
 body {
-  font-family: "Righteous", cursive;
+  font-family: "poppins", sans-serif;
+  background-color: rgba(76, 81, 81, 0.281);
+  margin: 40px 50px 50px 40px;
 }
 h1 {
-  font-size: 40px;
+  font-size: 30px;
 }
 .orange-colour {
-  colour: orange;
+  color: orange;
+}
+section {
+  padding-left: 80px;
+  display: flex;
+}
+.half-width {
+  width: 50%;
+}
+.half-width img {
+  width: 80%;
+  padding: 80px 50px 50px 90%;
+}
+.link-button {
+  text-decoration: none;
+  background-color: orange;
+  padding: 10px 40px;
+  border-radius: 5px;
+  font-weight: 700;
+}
+.to-banner {
+  background-image: url(images/249.jpg);
+  padding: 80px 50px 10px 90px;
+  margin: 200px;
 }
