--- a/style.css
+++ b/style.css
@@ -1,34 +1,61 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   font-family: "poppins", sans-serif;
   background-color: rgba(76, 81, 81, 0.281);
-  margin: 40px 50px 50px 40px;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.to-banner {
+  background-image: url(images/249.jpg);
+  background-repeat: no-repeat;
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  justify-content: end;
+  padding: 80px;
+  margin: 20px;
+  max-width: 1024px;
+}
+.context {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.img-container {
+  width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+img {
+  width: 80%;
 }
 h1 {
   font-size: 30px;
 }
-.orange-colour {
+.orange-color {
   color: orange;
 }
-section {
-  padding-left: 80px;
-  display: flex;
-}
+
 .half-width {
   width: 50%;
 }
-.half-width img {
-  width: 80%;
-  padding: 20px;
-}
+
 .link-button {
   text-decoration: none;
   background-color: orange;
   padding: 10px 40px;
   border-radius: 5px;
   font-weight: 700;
-}
-.to-banner {
-  background-image: url(images/249.jpg);
-  padding: 80px;
-  margin: 20px;
+  width: 9rem;
+  text-align: center;
 }
