--- a/style.css
+++ b/style.css
@@ -49,7 +49,6 @@ h1 {
 .half-width {
   width: 50%;
 }
-
 .link-button {
   text-decoration: none;
   background-color: orange;
@@ -57,5 +56,66 @@ h1 {
   border-radius: 5px;
   font-weight: 700;
   width: 9rem;
+  text-align: center;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "poppins", sans-serif;
+  background-color: rgba(76, 81, 81, 0.281);
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.dream-big {
+  background-image: url(images/Silver\ Blur\ Background\ Wallpaper\ \ \ The\ Wallpaper.jpg);
+  background-repeat: no-repeat;
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  justify-content: end;
+  padding: 60px;
+  margin: 30px;
+  max-width: 1024px;
+}
+.half-width {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.img {
+  width: 40%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+img {
+  width: 80px;
+}
+h2 {
+  font-size: 40px;
+}
+.orange-color {
+  color: orange;
+}
+
+.half-width {
+  width: 50%;
+}
+.link-button {
+  text-decoration: none;
+  background-color: orange;
+  padding: 20px 30px;
+  border-radius: 5px;
+  font-weight: 600;
+  width: 8rem;
   text-align: center;
 }
