--- a/style.css
+++ b/style.css
@@ -1,121 +1,31 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
 body {
-  font-family: "poppins", sans-serif;
-  background-color: rgba(76, 81, 81, 0.281);
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.to-banner {
-  background-image: url(images/249.jpg);
-  background-repeat: no-repeat;
-  display: flex;
-  gap: 20px;
-  align-items: center;
-  justify-content: end;
-  padding: 80px;
-  margin: 20px;
-  max-width: 1024px;
-}
-.context {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-.img-container {
-  width: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-img {
-  width: 80%;
+  font-family: "Poppins";
+  margin: 0;
 }
 h1 {
-  font-size: 30px;
+  font-size: 50px;
 }
 .orange-color {
-  color: orange;
+  color: rgb(247, 150, 81);
 }
-
-.half-width {
+section {
+  display: flex;
+}
+.context {
   width: 50%;
+  padding-left: 2%;
 }
-.link-button {
-  text-decoration: none;
-  background-color: orange;
-  padding: 10px 40px;
-  border-radius: 5px;
-  font-weight: 700;
-  width: 9rem;
-  text-align: center;
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body {
-  font-family: "poppins", sans-serif;
-  background-color: rgba(76, 81, 81, 0.281);
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.dream-big {
-  background-image: url(images/Silver\ Blur\ Background\ Wallpaper\ \ \ The\ Wallpaper.jpg);
-  background-repeat: no-repeat;
-  display: flex;
-  gap: 20px;
-  align-items: center;
-  justify-content: end;
-  padding: 60px;
-  margin: 30px;
-  max-width: 1024px;
-}
-.half-width {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-.img {
-  width: 40%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-img {
+.context img {
   width: 80px;
 }
-h2 {
-  font-size: 40px;
-}
-.orange-color {
-  color: orange;
-}
-
-.half-width {
-  width: 50%;
-}
 .link-button {
   text-decoration: none;
-  background-color: orange;
-  padding: 20px 30px;
+  background-image: linear-gradient(orange, tomato);
+  padding: 10px 40px;
   border-radius: 5px;
-  font-weight: 600;
-  width: 8rem;
-  text-align: center;
+  color: azure;
+  font-weight: 700;
+}
+.top-banner {
+  background-image: url(images/Silver\ Blur\ Background\ Wallpaper\ \ \ The\ Wallpaper.jpg);
 }
