--- a/style.css
+++ b/style.css
@@ -1,31 +1,54 @@
 body {
-  font-family: "Poppins";
+  font-family: "Open Sans", sans-serif;
   margin: 0;
 }
 h1 {
   font-size: 50px;
 }
 .orange-color {
-  color: rgb(247, 150, 81);
+  color: chocolate;
 }
-section {
+.flexible-container {
   display: flex;
+  margin-bottom: 150px;
 }
-.context {
+.half-with {
   width: 50%;
-  padding-left: 2%;
+  padding-left: 30px;
 }
-.context img {
-  width: 80px;
+.half-with img {
+  width: 80%;
 }
 .link-button {
   text-decoration: none;
-  background-image: linear-gradient(orange, tomato);
-  padding: 10px 40px;
+  background-image: linear-gradient(orange, rgb(193, 93, 36));
+  padding: 10px 10px;
+  border-radius: 3px;
+  color: aliceblue;
   border-radius: 5px;
-  color: azure;
-  font-weight: 700;
+  font-weight: 400;
 }
-.top-banner {
-  background-image: url(images/Silver\ Blur\ Background\ Wallpaper\ \ \ The\ Wallpaper.jpg);
+.dream-big {
+}
+.Experience-itam {
+  box-shadow: 10px 10px 40px rgb(106, 104, 104);
+  width: 40%;
+  margin-left: 5%;
+  margin-right: 5%;
+  padding-left: 20px;
+  border-radius: 10px;
+  border-left: rgb(75, 72, 14) solid;
+}
+
+#kna-kaneki {
+  border-left: rgb(182, 95, 80) solid;
+}
+
+.Experience-area {
+  background-image: url(images/249.jpg);
+  background-repeat: no-repeat;
+  background-position: left;
+}
+footer p {
+  text-align: center;
 }
